[package]
name = "ikokumeshi"
version = "0.1.0"
authors = ["_5da <tomoyo.mgc@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
log = "0.4.21"
wasm-logger = "0.2.0"
web-sys = "0.3.69"
